--- a/src/main/resources/minusbounce_at.cfg
+++ b/src/main/resources/minusbounce_at.cfg
@@ -50,6 +50,10 @@ public net.minecraft.network.play.client.C03PacketPlayer field_149481_i # rotati
 public net.minecraft.network.play.client.C08PacketPlayerBlockPlacement field_149577_f # facingX
 public net.minecraft.network.play.client.C08PacketPlayerBlockPlacement field_149578_g # facingY
 public net.minecraft.network.play.client.C08PacketPlayerBlockPlacement field_149584_h # facingZ
+public net.minecraft.network.play.client.C08PacketPlayerBlockPlacement field_179726_a #field_179726_a
+public net.minecraft.network.play.client.C08PacketPlayerBlockPlacement field_179725_b #position
+public net.minecraft.network.play.client.C08PacketPlayerBlockPlacement field_149579_d #placedBlockDirection
+public net.minecraft.network.play.client.C08PacketPlayerBlockPlacement field_149580_e #stack
 
 # C0FPacketConfirmTransaction
 public net.minecraft.network.play.client.C0FPacketConfirmTransaction field_149534_b # uid
