--- a/src/main/resources/minusbounce_at.cfg
+++ b/src/main/resources/minusbounce_at.cfg
@@ -80,6 +80,7 @@ public net.minecraft.network.play.server.S07PacketRespawn field_149087_c # gameT
 
 # Entity
 public net.minecraft.entity.Entity field_70134_J # isInWeb
+public net.minecraft.entity.Entity func_174806_f(FF)Lnet/minecraft/util/Vec3; #getVectorForRotation
 
 # EntityLivingBase
 public net.minecraft.entity.EntityLivingBase field_70773_bE # jumpTicks
