--- a/src/main/resources/minusbounce_at.cfg
+++ b/src/main/resources/minusbounce_at.cfg
@@ -160,3 +160,10 @@ public net.minecraft.network.play.server.S12PacketEntityVelocity field_149414_d 
 public net.minecraft.client.network.NetHandlerPlayClient field_147309_h # doneLoadingTerrain
 
 public net.minecraftforge.fml.common.Loader discoverer
+
+# PacketUtils
+public net.minecraft.network.NetworkManager func_150733_h()V # flushOutboundQueue
+public net.minecraft.network.NetworkManager func_150732_b(Lnet/minecraft/network/Packet;[Lio/netty/util/concurrent/GenericFutureListener;)V # dispatchPacket
+public net.minecraft.network.NetworkManager field_181680_j # readWriteLock
+public net.minecraft.network.NetworkManager field_150745_j # outboundPacketsQueue
+public net.minecraft.network.NetworkManager$InboundHandlerTuplePacketListener
