--- a/src/main/resources/minusbounce_at.cfg
+++ b/src/main/resources/minusbounce_at.cfg
@@ -5,6 +5,9 @@ public net.minecraft.client.renderer.GlStateManager$TextureState
 # ResourcePackRepository
 public net.minecraft.client.resources.ResourcePackRepository$Entry <init>(Lnet/minecraft/client/resources/ResourcePackRepository;Ljava/io/File;)V # constructor
 
+#AxisAlignedBB
+public net.minecraft.util.AxisAlignedBB func_72315_c(Lnet/minecraft/util/Vec3;)Z #isVecInXZ
+
 # TileEntityBannerRenderer
 public net.minecraft.client.renderer.tileentity.TileEntityBannerRenderer$TimedBannerTexture
 public net.minecraft.client.renderer.tileentity.TileEntityBannerRenderer$TimedBannerTexture <init>()V # constructor
@@ -18,7 +21,9 @@ public-f net.minecraft.client.Minecraft field_71449_j # session
 public net.minecraft.client.Minecraft field_71467_ac # rightClickDelayTimer
 public net.minecraft.client.Minecraft func_147116_af()V # clickMouse
 public net.minecraft.client.Minecraft func_147121_ag()V # rightClickMouse
+public net.minecraft.client.Minecraft func_147115_a(Z)V # sendClickBlockToController
 public net.minecraft.client.Minecraft field_71429_W # leftClickCounter
+
 
 # GuiIngame
 public net.minecraft.client.gui.GuiIngame field_175196_v # overlayPlayerList
@@ -96,6 +101,8 @@ public net.minecraft.client.entity.EntityPlayerSP field_110321_bQ # horseJumpPow
 public net.minecraft.client.entity.EntityPlayerSP field_110320_a # horseJumpPowerCounter
 public net.minecraft.client.entity.EntityPlayerSP field_175171_bO # serverSprintState
 public net.minecraft.client.entity.EntityPlayerSP field_175168_bP # positionUpdateTicks
+public net.minecraft.client.entity.EntityPlayerSP field_175164_bL #lastReportedYaw
+public net.minecraft.client.entity.EntityPlayerSP field_175165_bM #lastReportedPitch
 public net.minecraft.client.entity.EntityPlayerSP field_175172_bI #lastReportedPosX
 public net.minecraft.client.entity.EntityPlayerSP field_175166_bJ #lastReportedPosY
 public net.minecraft.client.entity.EntityPlayerSP field_175167_bK #lastReportedPosZ
