--- a/.github/workflows/beta_build.yml
+++ b/.github/workflows/beta_build.yml
@@ -35,17 +35,12 @@ jobs:
           job-id: jdk8
           arguments: build --no-build-cache
           gradle-version: wrapper
-      - name: Upload Artifact
+      - name: Prepare artifact
         run: |
           cd build/libs
           zip minusbounce.zip *
-          curl --connect-timeout 30 -m 300 -X POST -H "Authorization: Bearer ${{ secrets.SERVER_TOKEN }}" -H "User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36" -F "commit=${{ env.VERSION }}" -F "branch=${{ env.BRANCH }}" -F "message=${{ github.event.head_commit.message }}" -F "artifact=@minusbounce.zip;type=application/zip" https://apiuploadartifact.minusbounce.lol/beta
-
-#      - name: Publish package
-#        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-#        with:
-#          arguments: publish
-#        env:
-#          REPO_USERNAME: ${{ secrets.REPO_USERNAME }}
-#          REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
-#        if: ${{startsWith(github.repository, 'MinusMCNetwork')}}
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: MinutBau
+          path: build/libs/minusbounce.zip
