--- a/src/main/resources/minusbounce_at.cfg
+++ b/src/main/resources/minusbounce_at.cfg
@@ -7,6 +7,8 @@ public net.minecraft.client.resources.ResourcePackRepository$Entry <init>(Lnet/m
 
 #AxisAlignedBB
 public net.minecraft.util.AxisAlignedBB func_72315_c(Lnet/minecraft/util/Vec3;)Z #isVecInXZ
+public net.minecraft.util.AxisAlignedBB func_72333_b(Lnet/minecraft/util/Vec3;)Z #isVecInYZ
+public net.minecraft.util.AxisAlignedBB func_72319_d(Lnet/minecraft/util/Vec3;)Z #isVecInXY
 
 # TileEntityBannerRenderer
 public net.minecraft.client.renderer.tileentity.TileEntityBannerRenderer$TimedBannerTexture
