--- a/src/main/resources/minusbounce_at.cfg
+++ b/src/main/resources/minusbounce_at.cfg
@@ -47,6 +47,9 @@ public net.minecraft.network.play.client.C03PacketPlayer field_149473_f # pitch
 public net.minecraft.network.play.client.C03PacketPlayer field_149474_g # onGround
 public net.minecraft.network.play.client.C03PacketPlayer field_149481_i # rotating
 
+#S14PacketEntity
+public net.minecraft.network.play.server.S14PacketEntity field_149074_a #entityId
+
 # C08PacketPlayerBlockPlacement
 public net.minecraft.network.play.client.C08PacketPlayerBlockPlacement field_149577_f # facingX
 public net.minecraft.network.play.client.C08PacketPlayerBlockPlacement field_149578_g # facingY
