--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ compileJava.options.encoding = "UTF-8"
 compileKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
+        freeCompilerArgs += ["-Xopt-in=kotlin.RequiresOptIn"]
     }
 }
 
