--- a/src/main/resources/minusbounce_at.cfg
+++ b/src/main/resources/minusbounce_at.cfg
@@ -199,3 +199,13 @@ public net.minecraft.client.network.NetHandlerPlayClient field_147300_g
 public net.minecraft.client.entity.EntityPlayerSP field_175172_bI #lastReportedPosX
 public net.minecraft.client.entity.EntityPlayerSP field_175166_bJ #lastReportedPosY
 public net.minecraft.client.entity.EntityPlayerSP field_175167_bK #lastReportedPosZ
+
+public net.minecraft.entity.EntityLivingBase field_70703_bu # isJumping
+
+public net.minecraft.client.Minecraft func_147115_a(Z)V # sendClickBlockToController
+
+public net.minecraft.entity.Entity field_70150_b # nextStepDistance
+
+public net.minecraft.entity.Entity field_70151_c # fire
+
+public net.minecraft.entity.EntityLivingBase field_70773_bE # jumpTicks
