Backtrack Update, (Intave velocity testing)

--- a/src/main/resources/minusbounce_at.cfg
+++ b/src/main/resources/minusbounce_at.cfg
@@ -202,6 +202,10 @@ public net.minecraft.client.entity.EntityPlayerSP field_175167_bK #lastReportedP
 
 public net.minecraft.entity.EntityLivingBase field_70703_bu # isJumping
 
+public net.minecraft.network.play.server.S19PacketEntityStatus field_149164_a # entityId
+
+public net.minecraft.network.play.server.S19PacketEntityStatus field_149163_b # logicOpcode
+
 public net.minecraft.client.Minecraft func_147115_a(Z)V # sendClickBlockToController
 
 public net.minecraft.entity.Entity field_70150_b # nextStepDistance
