Client đã xong. #Release 1
++TickBase, TimerRange, Legit Velocity, many more i can't remember.

--- a/src/main/resources/minusbounce_at.cfg
+++ b/src/main/resources/minusbounce_at.cfg
@@ -114,8 +114,12 @@ public net.minecraft.client.renderer.EntityRenderer field_78490_B # thirdPersonD
 public net.minecraft.client.renderer.EntityRenderer field_78491_C # thirdPersonDistanceTemp
 
 # EntityOtherPlayerMP
-public net.minecraft.client.entity.EntityOtherPlayerMP field_71181_g #otherPlayerMPPitch
 public net.minecraft.client.entity.EntityOtherPlayerMP field_71180_f #otherPlayerMPYaw
+public net.minecraft.client.entity.EntityOtherPlayerMP field_71181_g #otherPlayerMPPitch
+public net.minecraft.client.entity.EntityOtherPlayerMP field_71182_d #otherPlayerMPY
+public net.minecraft.client.entity.EntityOtherPlayerMP field_71183_e #otherPlayerMPZ
+public net.minecraft.client.entity.EntityOtherPlayerMP field_71184_b #otherPlayerMPPosRotationIncrements
+public net.minecraft.client.entity.EntityOtherPlayerMP field_71185_c #otherPlayerMPX
 
 
 # GuiChest
