--- a/src/main/resources/minusbounce_at.cfg
+++ b/src/main/resources/minusbounce_at.cfg
@@ -217,3 +217,34 @@ public net.minecraft.entity.Entity field_70150_b # nextStepDistance
 public net.minecraft.entity.Entity field_70151_c # fire
 
 public net.minecraft.entity.EntityLivingBase field_70773_bE # jumpTicks
+
+public net.minecraft.client.gui.inventory.GuiContainer field_147003_i # guiLeft
+public net.minecraft.client.gui.inventory.GuiContainer field_147009_r # guiTop
+public net.minecraft.client.gui.inventory.GuiContainer func_146975_c(II)Lnet/minecraft/inventory/Slot; # getSlotAtPosition
+public net.minecraft.client.gui.inventory.GuiContainer field_146993_M # doubleClick
+public net.minecraft.client.gui.inventory.GuiContainer field_146998_K # lastClickSlot
+public net.minecraft.client.gui.inventory.GuiContainer field_146997_J # lastClickTime
+public net.minecraft.client.gui.inventory.GuiContainer field_146992_L # lastClickButton
+public net.minecraft.client.gui.inventory.GuiContainer field_146995_H # ignoreMouseUp
+public net.minecraft.client.gui.inventory.GuiContainer field_147005_v # clickedSlot
+public net.minecraft.client.gui.inventory.GuiContainer field_147012_x # draggedStack
+public net.minecraft.client.gui.inventory.GuiContainer field_147004_w # isRightMouseClick
+public net.minecraft.client.gui.inventory.GuiContainer field_146999_f # xSize
+public net.minecraft.client.gui.inventory.GuiContainer field_147000_g # ySize
+
+# GuiScreen
+public net.minecraft.client.gui.GuiScreen field_146292_n # buttonList
+public net.minecraft.client.gui.GuiScreen field_146290_a # selectedButton
+public net.minecraft.client.gui.GuiScreen func_146284_a(Lnet/minecraft/client/gui/GuiButton;)V # actionPerformed
+
+# ItemSword
+public net.minecraft.item.ItemSword field_150934_a # attackDamage
+
+# GuiInventory
+public net.minecraft.client.gui.inventory.GuiInventory func_146284_a(Lnet/minecraft/client/gui/GuiButton;)V # actionPerformed
+public net.minecraft.client.gui.inventory.GuiContainer field_147007_t # dragSplitting
+public net.minecraft.client.gui.inventory.GuiContainer field_146987_F # shiftClickedSlot
+public net.minecraft.client.gui.inventory.GuiContainer field_146988_G # dragSplittingButton
+public net.minecraft.client.gui.inventory.GuiContainer field_147008_s # dragSplittingSlots
+public net.minecraft.client.gui.inventory.GuiContainer field_146987_F # dragSplittingLimit
+public net.minecraft.client.gui.inventory.GuiContainer field_146994_N # shiftClickedSlot
