--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,12 @@ kotlin_version = 1.6.10
 detekt_version = 1.19.0
 forgegradle_version = a3d86a59c0
 mixingradle_version = ae2a80e
+
+snake_yml_version=2.2
+slf4j_version=2.0.12
+
+viaversion_version=4.10.3-SNAPSHOT
+viabackwards_version=4.10.3-SNAPSHOT
+viarewind_version=3.1.2
+vialoader_version=2.2.14-SNAPSHOT
+vialegacy_version=2.2.23-SNAPSHOT
